# vesc-gauge

./: .clang-format  .gitignore  README.md  platformio.ini  remote.json
boards/: waveshare_esp32s3_touch_lcd_21.json
include/: pins_arduino.h
include/waveshare_esp32s3_touch_lcd_21/: pins_arduino.h
lib/ComEVesc/: ComEVesc.cpp  ComEVesc.h  buffer.cpp  buffer.h  ch.h  crc.h  datatypes.h
lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_comp_hook.c  ui_events.c  ui_events.h  ui_font_font_speed_136pt.c  ui_font_font_speed_48pt.c  ui_helpers.c  ui_helpers.h  ui_screen_boot.c  ui_screen_lights_control.c  ui_screen_main.c  ui_screen_profile_editor.c  ui_screen_settings.c  ui_screen_wled_settings.c  ui_themes.c  ui_themes.h
squareline/: Themes.slt  pocketbikedisplay.sll  pocketbikedisplay.spj  pocketbikedisplay_events.py
squareline/assets/: ui_font_font_speed_136pt.c  ui_font_font_speed_136pt.fcfg  ui_font_font_speed_48pt.c  ui_font_font_speed_48pt.fcfg
src/: display.cpp  display.h  main.cpp  settings.h
src/drivers/battery/: battery.cpp  battery.h
src/drivers/display/: cst820.cpp  cst820.h  display.cpp  display.h  st7701.cpp  st7701.h
src/drivers/imu/: Gyro_QMI8658.cpp  Gyro_QMI8658.h
src/drivers/ioexpander/: TCA9554PWR.cpp  TCA9554PWR.h
src/drivers/pcf85063/: pcf85063.cpp  pcf85063.h
src/drivers/rtc/: RTC_PCF85063.cpp  RTC_PCF85063.h
src/drivers/sdcard/: sdcard.cpp  sdcard.h
src/utils/: Wireless.cpp  Wireless.h  fifo.h  i2c.cpp  i2c.h  lpfv.h  macros.h  timing.h  wmavg.h
src/wled_esp_now/: wled_esp_now.cpp  wled_esp_now.h
(+4 files in other folders)
